# MewChat

.github/workflows/: deploy.yml
client/: CMakeLists.txt
client/resources/: resources.qrc  style.qss
client/src/: main.cpp
client/src/ui/: chatwindow.cpp  chatwindow.h
server/: docker-compose.yml  go.mod
server/cmd/app/: main.go
server/internal/chat/: hub.go
server/internal/config/: config.go
server/internal/model/: message.go  room.go  user.go
server/internal/repository/: postgres.go  room.go  schema.go
